--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,6 +29,14 @@
 	height:auto;
 }
 
+#registryButtons div{
+	margin: 0px auto 5px auto
+}
+#registryButtons h5{
+	padding:10px 0px 10px 0px;
+}
+
+
 #rsvp_container header
 {
 	padding-top:25px;
