--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,9 @@
-.mapImage 
+.mapImage
 {
-	height: 180px;
-	width: 240px;
+	width:100%;
+	max-width:290px;
+	height:auto;
+	border:solid 1px #999;
 }
 
 .boldLink 
